--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -31,7 +31,7 @@
       <div class="col-lg-8 col-md-10 mx-auto">
         {% for obj in object_list %}
         <div class="post-preview">
-          <a href="{{ obj.get_absolute_url }}">
+          <a href="/post/{{ obj.slug }}">
             <h2 class="post-title">
               {{ obj.title }}
             </h2>
