--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
   
-    <title>Andrew's Mathematics Blog</title>
+    <title>Essential Theorems</title>
   
     <!-- Bootstrap core CSS -->
     <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -21,6 +21,11 @@
     <link href="{% static 'css/clean-blog.min.css' %}?{% now "U" %}" rel="stylesheet">
 
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon_io/apple-touch-icon.png' %}">
+<link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon_io/favicon-32x32.png' %}">
+<link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon_io/favicon-16x16.png' %}">
+<link rel="manifest" href="{% static 'favicon_io/site.webmanifest' %}">
     <script>
       window.MathJax = {
         tex: {
